fixed header and footer visibility issues on the phone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -146,7 +146,7 @@ footer {
 		  tr td {
 			  font-family: "Courier New", monospace;
 			  font-size: 0.9em;
-			  padding-left: 25px;
+			  padding-left: 40px;
 			  font-weight: bold;
 			}
 		}
@@ -155,11 +155,16 @@ footer {
 
 @media 
 only screen and (max-width: 767px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  #logo { font-size: 1.3em }
+
   footer nav {
     padding-right: 0;
     table {
       float: left;
-      tr td { font-size: 0.7em; font-weight: normal; }
+      tr td {
+        font-size: 0.8em;
+        padding-left: 25px;
+      }
     }
   }
 }
